Fixes some flickering issues.

--- a/src/views/classic.css
+++ b/src/views/classic.css
@@ -23,7 +23,7 @@
 	-fx-font-family : "Orbitron";
 	-fx-font-size : 30px ;
 	-fx-font-weight: 300 ;
-	-fx-text-fill : #A9A9A9;
+	-fx-text-fill : white;
 	
 }
 
